<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/picture1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forget_pw_prompt"
            android:textColor="@color/white_greyish"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/reset_email_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email_prompt"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="5dp">

        </LinearLayout>

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/reset_link_button"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>